# DSVAE

./: .gitignore  dataset.py  loader.py  mel.py  models.py  preprocess.ipynb  prior.py  pyproject.toml  test.py  test_models.py  train.ipynb  train.py  train_student.ipynb  vocoder.py
pretrained_models/tts-hifigan-ljspeech/: generator.ckpt  hyperparams.yaml
src/: main.py  mel.py
src/model/: C_DSVAE.py
src/models/: C_DSVAE.py  DSVAE.py
teacherstudent/: models.py  student.py  train.py
tests/: test_mel.py  test_vocoder.py  test_wav2vec.py
tmpdir_tts/: hyperparams.yaml  model.ckpt
