[tool.poetry]
name = "dsvae"
version = "0.1.0"
description = ""
authors = ["Ares <denon@xueyuan.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torchsummary = "^1.5.1"
matplotlib = "^3.9.2"
torch = "2.5.1"
torchaudio = "^2.5.1"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
